add the join cadets page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,44 +1,39 @@
-<div class="container p-5 text-dark text-medium">
+<div class="row mt-5 mb-5">
 
-  <div class="row mt-5 mb-5">
-
-    <div class="col">
-      <img src="assets/images/home1.png" class="rounded img-fluid card">
-    </div>
-
-    <div class="col-lg my-auto">
-      <p class="text-large text-justify font-weight-lighter">
-        Training Ship Waikato, also known as Waikato Navy Cadet’s
-        is
-        one of the three
-        <b class="text-alt">non-profit</b>
-        branches of the New
-        Zealand
-        Cadet Forces and is aimed at persons aged <b class="text-alt">13 to 18 years of age</b>. The main focus for our
-        cadet’s is military-base
-        leadership and <b class="text-alt">personal development</b> through a range of both national and regional
-        courses providing experience
-        and
-        qualifications, along with our weekly parade nights and weekend activities.
-      </p>
-    </div>
+  <div class="col">
+    <img class="rounded img-fluid card" src="assets/images/home1.png">
   </div>
 
-  <div class="row">
-
-    <div class="col my-auto">
-      <p class="text-justify font-weight-lighter">
-        You can find us at <b class="text-alt"><a
-        href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">6
-        Cambridge Road Hamilton</a></b> where we hold our weekly parade nights.
-      </p>
-    </div>
-    <div class="col-lg mb-5">
-      <h2 class="text-large text-center text-alt">Where To Find Us?</h2>
-      <a
-        href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">
-        <img src="assets/images/cadetMap.png" class="rounded img-fluid card">
-      </a>
-    </div>
+  <div class="col-lg my-auto">
+    <p class="text-large text-justify font-weight-lighter">
+      Training Ship Waikato, also known as Waikato Navy Cadet’s
+      is
+      one of the three
+      <b class="text-alt">non-profit</b>
+      branches of the New
+      Zealand
+      Cadet Forces and is aimed at persons aged <b class="text-alt">13 to 18 years of age</b>. The main focus for our
+      cadet’s is military-base
+      leadership and <b class="text-alt">personal development</b> through a range of both national and regional
+      courses providing experience
+      and
+      qualifications, along with our weekly parade nights and weekend activities.
+    </p>
+  </div>
+</div>
+<h2 align="center" class="text-large text-center text-alt">Where To Find Us?</h2>
+<div class="row">
+  <div class="col my-auto">
+    <p class="text-justify font-weight-lighter">
+      You can find us at <b class="text-alt"><a
+      href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">6
+      Cambridge Road Hamilton</a></b> where we hold our weekly parade nights.
+    </p>
+  </div>
+  <div class="col-lg mb-5">
+    <a
+      href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">
+      <img class="rounded img-fluid card" src="assets/images/cadetMap.png">
+    </a>
   </div>
 </div>
