--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <header>
   <ngb-carousel [showNavigationArrows]="showNavigationArrows" [showNavigationIndicators]="showNavigationIndicators">
-    <ng-template ngbSlide *ngFor="let image of images">
+    <ng-template *ngFor="let image of images" ngbSlide>
       <div class="picsum-img-wrapper">
-        <img [src]="image" alt="Random slide" style=" max-height: 750px; min-width: 100%">
+        <img [src]="image" alt="Random slide"
+             style="width: 100%; height: 750px; object-fit: cover; object-position: 40%">
       </div>
       <div class="carousel-caption text-alt background-lightAlpha rounded">
         <img src="assets/icons/Waikato%20Crest.png" width="100">
@@ -17,31 +18,31 @@
   <nav class="navbar navbar-expand-lg navbar-dark background-alt text-medium text-light">
     <div class="container">
       <a class="navbar-brand text-medium" href="#">Home</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-        (click)="isMenuCollapsed = !isMenuCollapsed">
+      <button (click)="isMenuCollapsed = !isMenuCollapsed" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+              class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse"
+              type="button">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="join" (click)="isMenuCollapsed = true">Join</a>
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="join">Join</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="events" (click)="isMenuCollapsed = true">Events</a>
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact" (click)="isMenuCollapsed = true">Contact Us</a>
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="contact">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="shop" (click)="isMenuCollapsed = true">Shop</a>
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="shop">Shop</a>
           </li>
-          <li class="nav-item" *ngIf="authService.isLoggedIn()">
-            <a class="nav-link" href="https://www.cadetnet.org.nz/" (click)="isMenuCollapsed = true">Cadet Net</a>
+          <li *ngIf="authService.isLoggedIn()" class="nav-item">
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="https://www.cadetnet.org.nz/">Cadet Net</a>
           </li>
         </ul>
-        <div class="form-inline my-2 my-lg-0" *ngIf="authService.isLoggedIn() else login">
+        <div *ngIf="authService.isLoggedIn() else login" class="form-inline my-2 my-lg-0">
           <label class="ml-1 mr-1">{{user.name}}</label>
           <label class="ml-1 mr-1 bold">|</label>
           <a (click)="authService.msLogout()"><label class="ml-1 mr-1 light">Logout</label></a>
@@ -51,9 +52,16 @@
   </nav>
 </header>
 
-<router-outlet></router-outlet>
+<div class="container p-5 text-dark text-medium">
+  <router-outlet></router-outlet>
+</div>
 
-<footer>
+<footer class="footer background-alt p-5" style="min-height: 50px">
+  <div class="container" >
+  <i class="text-normal">
+    <a class="a-light-color" href="https://www.cadetnet.org.nz/privacy-policy-for-cadetnet/#:~:text=New%20Zealand%20Cadet%20Forces'%20Privacy%20Statement&text=We%20can%20identify%20you.&text=We%20can%20manage%20your%20progression,are%20ongoing%2C%20disciplinary%20or%20otherwise.&text=We%20can%20award%20any%20credits%20you%20earn%20through%20NZCF.&text=We%20can%20contact%20you%20and%20return%20you%20home%20in%20an%20emergency.">Please visit this page for our privacy statement</a>
+  </i>
+  </div>
 </footer>
 
 <ng-template #login>
