--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,10 +1,8 @@
-<div class="container-md">
-  <div class="justify-content-center align-items-center">
-    <div class="card mt-4 ">
-      <iframe width="100%" height="1750"
-        src="https://forms.office.com/Pages/ResponsePage.aspx?id=FunhicgNyEWOGcqTWnV6VIXaTrMLjZxCkpylwC_VBV9UMkVaRUo0VTMzNjdUMEtRMkdKQk5LRDlEMCQlQCN0PWcu&embed=true"
-        style="border: none; max-width:100%;" allowfullscreen
-        webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
-    </div>
+<div class="justify-content-center align-items-center">
+  <div class="mt-4 ">
+    <iframe allowfullscreen height="1750"
+            mozallowfullscreen
+            msallowfullscreen src="https://forms.office.com/Pages/ResponsePage.aspx?id=FunhicgNyEWOGcqTWnV6VIXaTrMLjZxCkpylwC_VBV9UMkVaRUo0VTMzNjdUMEtRMkdKQk5LRDlEMCQlQCN0PWcu&embed=true"
+            style="border: none; max-width:100%;" webkitallowfullscreen width="100%"></iframe>
   </div>
 </div>
