--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -1,3 +1,139 @@
-<div class="container">
-
+<div>
+  <h2 align="center" class="text-subheader">Are you between the ages of <b class="text-alt">13 to 15</b>?<br><b
+    class="text-alt">Get Involved!</b></h2>
+  <div align="center" class="card mx-auto background-alt p-3">
+    <p class="text-medium text-light">
+      Our next recruiting
+      <br>
+      <b class="text-large text-light">24th NOVEMBER 2020 18:30</b>
+      <br>
+      <a id="link-alt-color" href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">6 Cambridge Road Hamilton</a>
+    </p>
+  </div>
 </div>
+
+<ngb-accordion [closeOthers]="true" class="m-5">
+  <ngb-panel id="custom-panel-2">
+    <ng-template ngbPanelHeader>
+      <div class="d-flex align-items-center justify-content-between">
+        <button ngbPanelToggle class="btn btn-link container-fluid text-left text-large">What will you learn?</button>
+      </div>
+    </ng-template>
+    <ng-template ngbPanelContent>
+      <div class="card mx-auto m-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img alt="..." class="card-img" src="assets/images/join-images/join-images-1.png">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-large text-alt"><b>LEADERSHIP</b></h5>
+              <p class="card-text text-medium text-justify">Leadership is a core function of our organisation; Cadets begin at
+                the bottom and over time move their way up the ranks. This gives real world experience to managing people, a
+                skill that is greatly sought after by employers in the future and something that the school system doesn’t
+                actively offer. After 2 – 3 years involved cadets will spend time confirming the skills they have learned
+                through a week long course typically held at a defence establishment, this course is full paid by the defence
+                force. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mx-auto m-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-large text-alt"><b>SAILING</b></h5>
+              <p class="card-text text-medium text-justify">A large element of a Navy Cadets career will be learning to sail.
+                We use sailing to promote and encourage team work, this is done via weekend exercises and also competing in
+                the National Regatta where our unit is put to the test in a number of challenges all based around our training
+                syllabus to see which unit is the best in the country. </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img alt="..." class="card-img" src="assets/images/join-images/join-images-2.png">
+          </div>
+        </div>
+      </div>
+
+      <div class="card mx-auto m-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img alt="..." class="card-img" src="assets/images/join-images/join-images-3.png">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-large text-alt"><b>FIREARMS TRAINING</b></h5>
+              <p class="card-text text-medium text-justify">Cadets are trained in the safe handling and operation of firearms,
+                before operating cadets are training the firearms safety laws and also rules around owning a firearm. During
+                their time in Cadets they will likely partake in many range days and have the chance to competitively shoot.
+                NZCF are only authorised to shoot .22 rifles and only at circular targets on closed / Defence Ranges. In some
+                instances, Cadet may also be invited to participate in shooting exercises with NZDF directly but only if they
+                can demonstrate sound understanding of the rules. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mx-auto m-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-large text-alt"><b>TEAMWORK</b></h5>
+              <p class="card-text text-medium text-justify">We pride ourselves in every we do to be enabling the Cadet to grow
+                as a member and also a leader of a team. During their time with us they will be challenged but growth is
+                typically enabled by the comradeship of those around them and they friend’s they also make from other
+                units. </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img alt="..." class="card-img" src="assets/images/join-images/join-images-4.png">
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-panel>
+  <ngb-panel id="custom-panel-1">
+    <ng-template ngbPanelHeader>
+      <div class="d-flex align-items-center justify-content-between">
+        <button ngbPanelToggle class="btn btn-link container-fluid text-left text-large">Register now</button>
+      </div>
+    </ng-template>
+    <ng-template ngbPanelContent class="background-light">
+      <iframe allowfullscreen height="2350"
+              mozallowfullscreen
+              msallowfullscreen src="https://ncv.microsoft.com/RgQmNMnF8K"
+              style="border: none; max-width:100%;" webkitallowfullscreen width="100%"></iframe>
+    </ng-template>
+  </ngb-panel>
+  <ngb-panel id="custom-panel-3">
+    <ng-template ngbPanelHeader>
+      <div class="d-flex align-items-center justify-content-between">
+        <button ngbPanelToggle class="btn btn-link container-fluid text-left text-large">Become an Officer</button>
+      </div>
+    </ng-template>
+    <ng-template ngbPanelContent class="background-light">
+
+      <div class="card mx-auto m-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img alt="..." class="card-img" src="assets/images/join-images/officers.png">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-large">NZCF Officers</h5>
+              <p class="card-text text-medium text-justify">NZCF officers are all volunteers that truly believe in the value
+                this organisation brings to our communities and next generation of New Zealanders. If you think you would like
+                to get involved as a volunteer / officer please email us <a href = "mailto: ts.waikato@cadetforces.org.nz">ts.waikato@cadetforces.org.nz</a>
+                <br>
+                <i class="text-normal">
+                  All NZCF Officers are subject to our NZCF 7 Criminal Records check process and this is refreshed every 3
+                  years.
+                </i>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-panel>
+</ngb-accordion>
