--- a/src/app/shop/shop-item/shop-item.component.html
+++ b/src/app/shop/shop-item/shop-item.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-3" style="max-width: 800px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img [src]="product.image" class="card-img" alt="...">
+      <img [src]="product.image" alt="..." class="card-img">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -9,13 +9,13 @@
         <p class="card-text text-medium">{{product.description}}</p>
         <div align="right">
           <h5 class="text-large">${{product.price}} NZD</h5>
-          <button class="snipcart-add-item btn-lg btn btn-success"
-                  data-item-url="https://scully-snipcart-api.netlify.com/products.json"
-                  [attr.data-item-price]="product.price"
+          <button [attr.data-item-description]="product.description"
+                  [attr.data-item-id]="product.id"
                   [attr.data-item-image]="product.image"
                   [attr.data-item-name]="product.name"
-                  [attr.data-item-description]="product.description"
-                  [attr.data-item-id]="product.id">
+                  [attr.data-item-price]="product.price"
+                  class="snipcart-add-item btn-lg btn btn-success"
+                  data-item-url="https://scully-snipcart-api.netlify.com/products.json">
             Add to cart
           </button>
         </div>
