--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,9 +1,7 @@
-<div class="container">
-  <h2 class="text-subheader" align="center">Cadet Shop</h2>
-  <button class="snipcart-checkout btn btn-lg btn-success">Click here to checkout</button>
-  <div *ngFor="let product of productList" align="center">
-    <app-shop-item [product]="product"></app-shop-item>
-  </div>
+<h2 align="center" class="text-subheader">Cadet Shop</h2>
+<button class="snipcart-checkout btn btn-lg btn-success">Click here to checkout</button>
+<div *ngFor="let product of productList" align="center">
+  <app-shop-item [product]="product"></app-shop-item>
 </div>
 
 
