--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,7 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
-
-$background-light: #FBFBFB;
-$background-dark: #817173;
-$background-alt: #9E855D;
+@import '~src/assets/stylesheets/colors.scss';
 
 html,
 body {
@@ -36,8 +33,8 @@ a {
   background-color: $background-light;
 }
 
-.background-lightAlpha{
-  background-color: transparentize($background-light,0.2)
+.background-lightAlpha {
+  background-color: transparentize($background-light, 0.2)
 }
 
 .background-alt {
@@ -61,14 +58,13 @@ a {
   font-weight: 600;
 }
 
-.text-subheader{
+.text-subheader {
   font-size: 5rem;
   font-weight: 600;
 }
 
 .text-large {
   font-size: 2.5rem;
-  font-weight: 500;
 }
 
 .text-medium {
