--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,8 @@
   <div class="mt-4 ">
     <iframe allowfullscreen height="1750"
             mozallowfullscreen
-            msallowfullscreen src="https://forms.office.com/Pages/ResponsePage.aspx?id=FunhicgNyEWOGcqTWnV6VIXaTrMLjZxCkpylwC_VBV9UMkVaRUo0VTMzNjdUMEtRMkdKQk5LRDlEMCQlQCN0PWcu&embed=true"
+            msallowfullscreen
+            src="https://forms.office.com/Pages/ResponsePage.aspx?id=FunhicgNyEWOGcqTWnV6VIXaTrMLjZxCkpylwC_VBV9UMkVaRUo0VTMzNjdUMEtRMkdKQk5LRDlEMCQlQCN0PWcu&embed=true"
             style="border: none; max-width:100%;" webkitallowfullscreen width="100%"></iframe>
   </div>
 </div>
