--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
       branches of the New
       Zealand
       Cadet Forces and is aimed at persons aged <b class="text-alt">13 to 18 years of age</b>. The main focus for our
-      cadet’s is military-base
+      cadet’s is military-based
       leadership and <b class="text-alt">personal development</b> through a range of both national and regional
       courses providing experience
       and
