--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,6 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark background-alt text-medium text-light">
     <div class="container">
-      <a class="navbar-brand text-medium" href="#">Home</a>
       <button (click)="isMenuCollapsed = !isMenuCollapsed" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation"
               class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse"
@@ -27,6 +26,9 @@
 
       <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="#">Home</a>
+          </li>
           <li class="nav-item">
             <a (click)="isMenuCollapsed = true" class="nav-link" href="join">Join</a>
           </li>
