--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <div class="card mx-auto m-3">
+      <div class="card m-3">
         <div class="row no-gutters">
           <div class="col-md-8">
             <div class="card-body">
