updates to text and home page

--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -7,11 +7,16 @@
       <br>
       <b class="text-large text-light">24th NOVEMBER 2020 18:30</b>
       <br>
-      <a href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z"
-         id="link-alt-color">6
+      <a
+        href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z"
+        id="link-alt-color">6
         Cambridge Road Hamilton</a>
     </p>
   </div>
+</div>
+
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe allowfullscreen class="embed-responsive-item" src="https://www.youtube.com/embed/_-FwAhNq4b0"></iframe>
 </div>
 
 <ngb-accordion [closeOthers]="true" class="m-5">
@@ -31,16 +36,11 @@
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>LEADERSHIP</b></h5>
               <p class="card-text text-medium text-justify">Leadership is a core function of our organisation; Cadets
-                begin at
-                the bottom and over time move their way up the ranks. This gives real world experience to managing
-                people, a
-                skill that is greatly sought after by employers in the future and something that the school system
-                doesn’t
-                actively offer. After 2 – 3 years involved cadets will spend time confirming the skills they have
-                learned
-                through a week long course typically held at a defence establishment, this course is full paid by the
-                defence
-                force. </p>
+                begin at the bottom and over time move their way up the ranks. This gives real world experience to
+                managing people, a skill that is greatly sought after by employers in the future and something that the
+                school system doesn’t actively offer. After 2 – 3 years involved cadets will spend time confirming the
+                skills they have learned through a week long course typically held at a defence establishment, this
+                course is fully paid by the New Zealand Defence Force. </p>
             </div>
           </div>
         </div>
@@ -50,13 +50,12 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>SAILING</b></h5>
-              <p class="card-text text-medium text-justify">A large element of a Navy Cadets career will be learning to
-                sail.
-                We use sailing to promote and encourage team work, this is done via weekend exercises and also competing
-                in
-                the National Regatta where our unit is put to the test in a number of challenges all based around our
-                training
-                syllabus to see which unit is the best in the country. </p>
+              <p class="card-text text-medium text-justify">A large element of a Navy Cadet career will be learning
+                skills on the water. We use primarily use sailing to promote and encourage teamwork and provide our
+                leaders a chance to practice their skills in pressured situations, this is training is strengthened
+                through weekend activities and National Competitions. The pinnacle event for a cadet is the National
+                Regatta where our unit is put to the test in several challenges based around our training syllabus to
+                see which unit is the best in the country. </p>
             </div>
           </div>
           <div class="col-md-4">
@@ -74,16 +73,10 @@
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>FIREARMS TRAINING</b></h5>
               <p class="card-text text-medium text-justify">Cadets are trained in the safe handling and operation of
-                firearms,
-                before operating cadets are training the firearms safety laws and also rules around owning a firearm.
-                During
-                their time in Cadets they will likely partake in many range days and have the chance to competitively
-                shoot.
-                NZCF are only authorised to shoot .22 rifles and only at circular targets on closed / Defence Ranges. In
-                some
-                instances, Cadet may also be invited to participate in shooting exercises with NZDF directly but only if
-                they
-                can demonstrate sound understanding of the rules. </p>
+                firearms, before handling any firearm cadets are fully trained by qualified officers in the firearms
+                safety laws. During a Cadet’s time they will likely partake in in many range days and have the chance to
+                competitively shoot. NZCF are only authorised to use .22 rifles and our targets are never anything more
+                than circular. </p>
             </div>
           </div>
         </div>
@@ -94,11 +87,11 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>TEAMWORK</b></h5>
-              <p class="card-text text-medium text-justify">We pride ourselves in every we do to be enabling the Cadet
-                to grow
-                as a member and also a leader of a team. During their time with us they will be challenged but growth is
-                typically enabled by the comradeship of those around them and they friend’s they also make from other
-                units. </p>
+              <p class="card-text text-medium text-justify">All our training focuses the Cadets to work together to grow
+                as a team, from uniform care to drill (marching) a Cadet will need to lean on others for support and
+                help others so that they can all achieve a common goal. This results in a strong sense of belonging and
+                comradeship. This is an important life skill to be exposed to as it helps with employment and University
+                Projects. </p>
             </div>
           </div>
           <div class="col-md-4">
