--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,3 +82,6 @@ a {
 .light {
   font-weight: 200;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
