--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
             <a (click)="isMenuCollapsed = true" class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a (click)="isMenuCollapsed = true" class="nav-link" href="join">Join</a>
+            <a (click)="isMenuCollapsed = true" class="nav-link" href="https://bit.ly/tswaikatojoinus">Join</a>
           </li>
           <li class="nav-item">
             <a (click)="isMenuCollapsed = true" class="nav-link" href="events">Events</a>
@@ -59,8 +59,12 @@
 <footer class="footer background-alt p-5" style="min-height: 50px">
   <div class="container">
     <i class="text-normal a-light-color">
-      <a href="mailto: ts.waikato@cadetforces.org.nz"><mat-icon class="mat-icon m-2 a-light-color">email</mat-icon></a>
-      <a href="https://www.fb.com/tswaikato"><mat-icon class="mat-icon m-2 a-light-color">facebook</mat-icon></a>
+      <a href="mailto: ts.waikato@cadetforces.org.nz">
+        <mat-icon class="mat-icon m-2 a-light-color">email</mat-icon>
+      </a>
+      <a href="https://www.fb.com/tswaikato">
+        <mat-icon class="mat-icon m-2 a-light-color">facebook</mat-icon>
+      </a>
       <br>
       <a class="a-light-color"
          href="https://www.cadetnet.org.nz/privacy-policy-for-cadetnet/#:~:text=New%20Zealand%20Cadet%20Forces'%20Privacy%20Statement&text=We%20can%20identify%20you.&text=We%20can%20manage%20your%20progression,are%20ongoing%2C%20disciplinary%20or%20otherwise.&text=We%20can%20award%20any%20credits%20you%20earn%20through%20NZCF.&text=We%20can%20contact%20you%20and%20return%20you%20home%20in%20an%20emergency.">Please
