--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,8 @@
   <div class="col-lg my-auto">
     <p class="text-large text-justify font-weight-lighter">
       Training Ship Waikato, also known as Waikato Navy Cadet’s, is one of three Corps of the New Zealand Cadet Forces.
-      <b class="text-alt">Our aim</b> is to prepare young New Zealanders for tomorrow. We do this through our military-based training model and
+      <b class="text-alt">Our aim</b> is to prepare young New Zealanders for tomorrow. We do this through our
+      military-based training model and
       values this enables content not often covered in schools, such as leadership, instructional technique, firearms
       training, teamwork plus much more.
     </p>
