--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,5 +83,11 @@ a {
   font-weight: 200;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
