--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             <a (click)="isMenuCollapsed = true" class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a (click)="isMenuCollapsed = true" class="nav-link" href="https://bit.ly/tswaikatojoinus">Join</a>
+            <a (click)="isMenuCollapsed = true" class="nav-link" [href]="joinLink">Join</a>
           </li>
           <li class="nav-item">
             <a (click)="isMenuCollapsed = true" class="nav-link" href="events">Events</a>
