WIP - set so the image height matches the sceen minus the nav menu
Because
- Quite often it feels like the image is either too large going over the visible area of too short

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <header>
   <div class="headContainer">
-    <img class="headImage" src="assets/images/bannerImage.png">
+    <img class="headImage" src="assets/images/bannerImage.png" [style.height.px]="headerHeight">
     <div class="centered background-lightAlpha text-alt rounded">
       <img src="assets/icons/Waikato%20Crest.png" width="100">
       <h1 class="text-header">Waikato Navy Cadets</h1>
     </div>
   </div>
 
-  <nav class="navbar navbar-expand-lg navbar-dark background-alt text-medium text-light">
+  <nav #navElement class="navbar navbar-expand-lg navbar-dark background-alt text-medium text-light">
     <div class="container">
       <button (click)="isMenuCollapsed = !isMenuCollapsed" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation"
