vertical center text on the join page

--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -32,7 +32,7 @@
           <div class="col-md-4">
             <img alt="..." class="card-img" src="assets/images/join-images/join-images-1.png">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 my-auto">
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>LEADERSHIP</b></h5>
               <p class="card-text text-medium text-justify">Leadership is a core function of our organisation; Cadets
@@ -47,7 +47,7 @@
       </div>
       <div class="card mx-auto m-3">
         <div class="row no-gutters">
-          <div class="col-md-8">
+          <div class="col-md-8 my-auto">
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>SAILING</b></h5>
               <p class="card-text text-medium text-justify">A large element of a Navy Cadet career will be learning
@@ -69,7 +69,7 @@
           <div class="col-md-4">
             <img alt="..." class="card-img" src="assets/images/join-images/join-images-3.png">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 my-auto">
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>FIREARMS TRAINING</b></h5>
               <p class="card-text text-medium text-justify">Cadets are trained in the safe handling and operation of
@@ -84,7 +84,7 @@
 
       <div class="card m-3">
         <div class="row no-gutters">
-          <div class="col-md-8">
+          <div class="col-md-8 my-auto">
             <div class="card-body">
               <h5 class="card-title text-large text-alt"><b>TEAMWORK</b></h5>
               <p class="card-text text-medium text-justify">All our training focuses the Cadets to work together to grow
