--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -2,7 +2,7 @@
   <h2 align="center" class="text-subheader">Are you between the ages of <b class="text-alt">13 to 15</b>?<br><b
     class="text-alt">Get Involved!</b></h2>
   <div align="center" class="card mx-auto background-alt p-3">
-    <p class="text-medium text-light">
+    <!--<p class="text-medium text-light">
       Our next recruiting
       <br>
       <b class="text-large text-light">24th NOVEMBER 2020 18:30</b>
@@ -11,7 +11,8 @@
         href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z"
         id="link-alt-color">6
         Cambridge Road Hamilton</a>
-    </p>
+    </p>-->
+    <b class="text-large text-light">ENQUIRE NOW</b>
   </div>
 </div>
 
